hasqd/tests/coptest/simple/db/positive/004.sts
#!/bin/sh
$1/zdb < 004.inp
