hasqd/tests/coptest/simple/db/negative/001.sts
#!/bin/sh
$1/zdb < 001.inp
